mention mytracks in the readme

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 parses a gpx file, draws a polyline on google maps color coded to speed: more red == moar faster
+
 Two gpx files are included, and you can test this out at: http://amiel.github.com/gpx-map-js
+The gpx files were created with MyTracks for android on my G1 (cyanogenmod)
 
 I'm looking for a better algorithm for translating the speed to a color if anyone is interested in helping with that.
